--- a/Config/DefaultGame.ini
+++ b/Config/DefaultGame.ini
@@ -1,3 +1,7 @@
 [/Script/EngineSettings.GeneralProjectSettings]
 ProjectID=0CD53B464E99043D671EF49218446635
 ProjectName=Third Person BP Game Template
+
+[/Script/UnrealEd.ProjectPackagingSettings]
+BuildConfiguration=PPBC_Development
+
