--- a/Config/DefaultInput.ini
+++ b/Config/DefaultInput.ini
@@ -142,6 +142,8 @@ DoubleClickTime=0.200000
 +ActionMappings=(ActionName="ResetVR",bShift=False,bCtrl=False,bAlt=False,bCmd=False,Key=MagicLeap_Left_Bumper)
 +ActionMappings=(ActionName="Sprinting",bShift=False,bCtrl=False,bAlt=False,bCmd=False,Key=LeftShift)
 +ActionMappings=(ActionName="GamePause",bShift=False,bCtrl=False,bAlt=False,bCmd=False,Key=Tab)
++ActionMappings=(ActionName="DodgeLeft",bShift=False,bCtrl=False,bAlt=False,bCmd=False,Key=Q)
++ActionMappings=(ActionName="DodgeRight",bShift=False,bCtrl=False,bAlt=False,bCmd=False,Key=E)
 +AxisMappings=(AxisName="MoveForward",Scale=1.000000,Key=W)
 +AxisMappings=(AxisName="MoveForward",Scale=-1.000000,Key=S)
 +AxisMappings=(AxisName="MoveForward",Scale=1.000000,Key=Up)
